@@ -1,3 +1,7 @@
+2012-11-22  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-shr-100.patch: Updated.
+
 2012-11-19  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-shr-100.patch: Updated.
